[metadata]
name = compass
version = 0.1.0
summary = Open Deployment Service
description-file =
    README.md
author = Compass Dev
author-email = dev@syscompass.org
home-page = http://www.syscompass.org
classifier =
    Environment :: Compass
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    compass

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build=
tag_date=0

